force-app/main/default/objects/FINS_Lending_Loan__c/fields/Days_Until_Anticipated_Closing__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Anticipated_Closing__c</fullName>
    <label>Days Until Anticipated Closing</label>
    <type>Date</type>
</CustomField>