force-app/main/default/objects/FINS_Lending_Loan__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time</label>
    <type>Time</type>
</CustomField>