force-app/main/default/objects/FINS_Lending_Loan__c/fields/FINS_Loan_Maturing__c.field-meta.xml
<CustomField>
    <fullName>FINS_Loan_Maturing__c</fullName>
    <formula>(FINS_Maturity_Date__c - TODAY()) &lt; 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Maturing</label>
    <type>Checkbox</type>
</CustomField>