force-app/main/default/objects/FINS_Lending_Loan__c/fields/FINS_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Maturity_Date__c</fullName>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>