force-app/main/default/objects/FINS_Lending_Loan__c/fields/FINS_Q_Branch_Demo_Reference__c.field-meta.xml
<CustomField>
    <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
    <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
    <label>Q-Branch Demo Reference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
    </valueSet>
</CustomField>