force-app/main/default/objects/FINS_Lending_Loan__c/fields/Projected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Close_Date__c</fullName>
    <label>Projected Close Date</label>
    <type>Date</type>
</CustomField>